	* optimized disk cache
	* optimized .torrent file parsing
	* optimized initialization of storage when adding a torrent
	* added support for adding torrents asynchronously (for improved startup performance)
	* added support for asynchronous disk I/O
	* almost completely changed the storage interface (for custom storage)
	* added support for hashing pieces in multiple threads

	* support read-only DHT nodes
	* remove unused partial hash DHT lookups
	* remove potentially privacy leaking extension (non-anonymous mode)
	* peer-id connection ordering fix in anonymous mode
	* mingw fixes

1.0.2 release

	* added missing force_proxy to python binding
	* anonymous_mode defaults to false
	* make DHT DOS detection more forgiving to bursts
	* support IPv6 multicast in local service discovery
	* simplify CAS function in DHT put
	* support IPv6 traffic class (via the TOS setting)
	* made uTP re-enter slow-start after time-out
	* fixed uTP upload performance issue
	* fix missing support for DHT put salt

1.0.1 release

	* fix alignment issue in bitfield
	* improved error handling of gzip
	* fixed crash when web seeds redirect
	* fix compiler warnings

1.0 release

	* fix bugs in convert_to/from_native() on windows
	* fix support for web servers not supporting keepalive
	* support storing save_path in resume data
	* don't use full allocation on network drives (on windows)
	* added clear_piece_deadlines() to remove all piece deadlines
	* improve queuing logic of inactive torrents (dont_count_slow_torrents)
	* expose optimistic unchoke logic to plugins
	* fix issue with large UDP packets on windows
	* remove set_ratio() feature
	* improve piece_deadline/streaming
	* honor pieces with priority 7 in sequential download mode
	* simplified building python bindings
	* make ignore_non_routers more forgiving in the case there are no UPnP
	  devices at a known router. Should improve UPnP compatibility.
	* include reason in peer_blocked_alert